# Pathological-V2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
docs/plans/: 2025-12-22-mvp-path-tracer-design.md  2025-12-22-mvp-path-tracer-implementation.md  2026-01-19-gltf-scene-loading-design.md
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/render-image/: route.ts
frontend/app/api/renders/: route.ts
frontend/app/api/renders/[id]/: route.ts
frontend/app/lib/: generateID.ts
frontend/types/: scheduler.ts
protos/: render_server.grpc.pb.cc  render_server.grpc.pb.h  render_server.pb.cc  render_server.pb.h  render_server.proto  scheduler_server.grpc.pb.cc  scheduler_server.grpc.pb.h  scheduler_server.pb.cc  scheduler_server.pb.h  scheduler_server.proto
render_worker/: CMakeLists.txt  vcpkg.json
render_worker/shaders/: closesthit.rchit  common.glsl  miss.rmiss  raygen.rgen
render_worker/src/: buffer.hpp  job.cpp  job.hpp  jobs.cpp  jobs.hpp  main.cpp  path_tracer.cpp  path_tracer.hpp  render_job.cpp  render_job.hpp  render_jobs.cpp  render_jobs.hpp  render_server.cpp  render_server.hpp  render_worker.cpp  render_worker.hpp  s3_manager.cpp  s3_manager.hpp  scene.hpp  scheduler_client.cpp  scheduler_client.hpp  vulkan_context.cpp  vulkan_context.hpp
render_worker/test_scenes/: cornell_box.gltf  cube_inline.gltf
scheduler/: CMakeLists.txt  CMakePresets.json  render_server.proto  scheduler.proto  scheduler_server.proto  vcpkg-configuration.json  vcpkg.json
scheduler/protos/: render_server.proto  scheduler_server.proto
scheduler/src/: main.cpp  renderRequest.cpp  renderRequest.hpp  renderStatus.hpp  render_client.cpp  render_client.hpp  render_history.cpp  render_history.hpp  render_server.cpp  render_server.pb.cc  render_server.pb.h  requestController.cpp  requestController.hpp  rpcserver.hpp  s3Manager.cpp  s3Manager.hpp  scheduler.cpp  scheduler.hpp  scheduler_client.cpp  scheduler_server.cpp  scheduler_server.hpp  scheduler_server.pb.cc  scheduler_server.pb.h  webserver.hpp  worker.hpp
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen
src/: main.cpp  path_tracer.cpp  path_tracer.hpp  scene.cpp  scene.hpp  scene_builder.cpp  scene_builder.hpp  scene_graph.cpp  scene_graph.hpp  vulkan_context.cpp  vulkan_context.hpp
test_scenes/: cornell_box_animated.gltf  cube.gltf  cube_inline.gltf
